--- a/githubpractice.html
+++ b/githubpractice.html
@@ -2,8 +2,28 @@
 <html>
     <head>
         <title>
-            
+           Brandon's Bio 
         </title>
     </head>
+    <body>
+
+        <h1>Student Bio</h1>
+
+        <h3>Brandon Haines</h3>
+
+        <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/19225714_10154624349956935_6592873830389712288_n.jpg?oh=13fbb8838a1f97eddf6d0f7dc0e719b8&oe=5A824A47"/>
+
+        <p>Hi, my name is Brandon and I am 26 years old. I work in the marketing field for my parents business and hope to one day work in web development. I recently graduated from the University of Arizona and have a Bachelors in Markeing. I love to play/watch sports as well as play video games in my free time. Originally I am from Wisconsin but moved down to Arizona 12 years ago.</p>
+
+        <h1>Contact Info</h1>
+
+        <ul>
+            <li>Email:<a href= "#">haines.brandon.91@gmail.com</a></li>
+            <li>GitHub:<a href= "#">bhaines</a></li>
+            <li>Portfolio:<a href= "#">bhaines</a></li>
+        </ul>
+
+        
+    </body>
 
 </html>
