--- a/githubpractice.html
+++ b/githubpractice.html
@@ -18,9 +18,9 @@
         <h1>Contact Info</h1>
 
         <ul>
-            <li>Email:<a href= "#">haines.brandon.91@gmail.com</a></li>
-            <li>GitHub:<a href= "#">bhaines</a></li>
-            <li>Portfolio:<a href= "#">bhaines</a></li>
+            <strong><li>Email:<a href= "#">haines.brandon.91@gmail.com</a></li></strong>
+            <strong><li>GitHub:<a href= "#">bhaines</a></li></strong>
+            <strong><li>Portfolio:<a href= "#">bhaines</a></li></strong>
         </ul>
 
         
