added css to student bio

--- a/githubpractice.html
+++ b/githubpractice.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="\week1-day2-html-css\style.css">
+        <meta charset="UTF-8">
         <title>
            Brandon's Bio 
         </title>
+
     </head>
     <body>
 
@@ -22,7 +25,6 @@
             <strong><li>GitHub:<a href= "#">bhaines</a></li></strong>
             <strong><li>Portfolio:<a href= "#">bhaines</a></li></strong>
         </ul>
-
         
     </body>
 
